test/tests/compiler/18_structures/invalid_types/extra_credit/bad_union_member_access/union_bad_member.plx
type union s(    x: i32    , y: i32    
    )

type union t(    blah: i32    
    , y: i32    
    )

pub fn main(none) i32 {
    foo: union s = $(1)
    return foo.blah #  "union s" has no member "blah"
}
